fixed issue where Sickbeard items were jumping around by 1px on hover

--- a/static/less/module-sickbeard.less
+++ b/static/less/module-sickbeard.less
@@ -58,7 +58,12 @@
     }
 
     .details {
+      bottom: 0;
       display: none;
+      left: 0;
+      position: absolute;
+      right: 0;
+      top: 0;
 
       .airs {
         position: absolute;
